# LaProt

./: .gitignore  README.md  inference.py  pyproject.toml  safely_manuel_env_set_yining.sh
laprot/model/: inference_demo.ipynb  preprocess.py  tokenizer.py
laprot/train/: ds_config.json  train_mamba2.py  train_trainer_mamba2.py  train_trainer_rwkv6.py  train_trainer_rwkv7.py
logs/: laprot_jupyternotebook_15572342.err  laprot_jupyternotebook_15572347.err
scripts/: run_notebook.sh  run_pretrain.sh  zero_2_config.json
